fixed z-index/circle as ellipse

--- a/app/assets/stylesheets/input.css
+++ b/app/assets/stylesheets/input.css
@@ -8,6 +8,7 @@
   padding: 0 4px;
   border-radius: 4px;
   border: 1px solid transparent;
+  text-align: center;
 }
 
 .input-attr:hover {
